--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     width: 350px;
     height: 220px;
     padding: 15px 10px 20px 10px ;
-    margin: 30px;
+    margin-bottom: 30px;
     border: dashed 2px red;
     background-color: green;
 }
